# Very-Huge-Number

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: HighPrecision.cpp.639EA6AE2AE5C02B.idx  HighPrecision.h.589B2EACC03F83E2.idx  Main.cpp.1A090AFD45A02377.idx
include/: HighPrecision.h
src/: HighPrecision.cpp  Main.cpp
